myteo/test/analyze/type_check/binary_operation/compare.myte
module Test

fun main() {
  // Non-erroring cases
  (1 < 2: Bool);
  (1 > 2: Bool);
  (1 <= 2: Bool);
  (1 >= 2: Bool);
  ("a" < "b": Bool);

  // Error when both types are comparable but incompatible
  (1 < "a": Bool);
  ("a" < 1: Bool);

  // Error on non-comparable arguments
  (1 < true: Bool);
  (true < "a": Bool);
  (true + (): Bool);
}